# mth_reader

./: CMakeLists.txt  README.md
examples/first-example/: CMakeLists.txt
src/: main.cpp
src/config/: MyPrgConfig.h.in
src/include/: fileReader.h  mthreader.h  search.h
src/sources/: mthreader.cpp  search.cpp
tests/: CMakeLists.txt  fileReadTest.cpp  mthReaderTest.cpp  searchTest.cpp
tests/data/: example.in  fifth.in  second.in
